--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,6 @@
   <br>
 Hello World
 <img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
-<p> Here is my paragraph.vnvjgjg vmvjhg </p>
+<p> Here is my paragraph.vnvjgjg vmvjhg added more text</p>
 </body>
 </html>
